tracking down bug with service calendars and routes only valid for one day - tests added and fixed. New data version including upcoming closures. WIP on avoiding backtracking on tram routing, but disabled for now