@@ -6,6 +6,7 @@ import com.tramchester.config.TemporaryStationsWalkIds;
 import com.tramchester.domain.StationClosures;
 import com.tramchester.domain.StationIdPair;
 import com.tramchester.integration.testSupport.TestGroupType;
+import com.tramchester.integration.testSupport.config.closures.StationClosuresListForTest;
 import com.tramchester.integration.testSupport.naptan.NaptanRemoteDataSourceTestConfig;
 import com.tramchester.integration.testSupport.nptg.NPTGDataSourceTestConfig;
 import com.tramchester.integration.testSupport.postcodes.PostCodeDatasourceConfig;
@@ -13,14 +14,15 @@ import com.tramchester.integration.testSupport.rail.RailRemoteDataSourceConfig;
 import com.tramchester.testSupport.GraphDBType;
 import com.tramchester.testSupport.TestConfig;
 import com.tramchester.testSupport.TestEnv;
+import com.tramchester.testSupport.UpcomingDates;
+import com.tramchester.testSupport.reference.TramStations;
 
 import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
 
 import static com.tramchester.testSupport.UpcomingDates.MediaCityToImperialWarMus;
-import static com.tramchester.testSupport.reference.TramStations.ImperialWarMuseum;
-import static com.tramchester.testSupport.reference.TramStations.MediaCityUK;
+import static com.tramchester.testSupport.reference.TramStations.*;
 
 public abstract class IntegrationTestConfig extends TestConfig {
 
@@ -30,7 +32,19 @@ public abstract class IntegrationTestConfig extends TestConfig {
 
     protected final RailRemoteDataSourceConfig railRemoteDataSource;
 
-    public static final List<StationClosures> CurrentClosures =Collections.emptyList();
+//    public static final List<StationClosures> CurrentClosures =Collections.emptyList();
+
+    static List<TramStations> marketStreetAndShudehill = List.of(Shudehill, MarketStreet);
+    static List<TramStations> piccGardens = List.of(PiccadillyGardens);
+
+    public static final List<StationClosures> CurrentClosures = List.of(
+            new StationClosuresListForTest(marketStreetAndShudehill, UpcomingDates.MarketStreetAndShudehillSept,
+            true, Collections.emptySet(), Collections.emptySet()),
+            new StationClosuresListForTest(piccGardens, UpcomingDates.PiccGardensAutumn2026,
+                    true, Collections.emptySet(), Collections.emptySet())
+    );
+
+
 
     /**
      * EXAMPLE
